exibição das mensagens teoricamente finalizada

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ion-icon name="people-outline"></ion-icon>
     </header>
     <main>
-        <div class="mensagens"></div>
+        <ul class="mensagens"></ul>
     </main>
     <footer>
         <input type="text" placeholder="Escreva aqui...">
