adição de data-test

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="mensagens"></ul>
     </main>
     <footer>
-        <input type="text" placeholder="Escreva aqui...">
+        <input data-test="input-message" type="text" placeholder="Escreva aqui...">
         <button onclick="enviarMensagem()" data-test="send-message"><ion-icon
                 name="paper-plane-outline"></ion-icon></button>
     </footer>
